# ai-light-show-v2

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  features-backlog.md  pytest.ini  test_payload.py
analyzer/: .dockerignore  .gitignore  Dockerfile  E2E_REPORT.md  GPU_INSTALL.md  README.md  analyze_song.py  beat_comparison.py  implementation_backlog.md  import_moises.py  main.py  pyproject.toml  python  requirements-drums.txt  requirements-ml.txt  requirements.txt  split_stems.py
analyzer/docs/: lighting_score_template.md
analyzer/song_analyzer/: __init__.py  cli.py  config.py  custom_logging.py  helpers.py  pipeline.py
analyzer/song_analyzer/io/: __init__.py  audio_decode.py  hashing.py  json_write.py  paths.py
analyzer/song_analyzer/ml/: __init__.py  beat_tracker.py  demucs.py
analyzer/src/: __init__.py  beat_finder.py  generate_md.py  http_api.py  progress.py  song_meta.py  split_stems.py  task_dispatch.py  task_queue_api.py  task_queue_store.py
analyzer/src/api/: __init__.py  (+2 more)
analyzer/tests/: test_analyze_with_essentia_progress.py  test_basic_pitch_engine.py  test_batch_flow.py  test_beats_step.py  test_cli.py  test_find_chord_patterns.py  test_find_chords_cli.py  test_find_sections_cli.py  test_find_sections_runtime.py  test_find_stem_patterns.py  test_full_artifact_playlist.py  test_generate_md.py  test_http_api.py  test_ingest.py  test_init_song.py  test_loudness_hints.py  test_loudness_metadata.py  test_moises_import.py  test_music_feature_layers.py  test_pipeline_steps.py  test_stereo_analysis.py  test_task_dispatch.py  test_task_queue_api.py
(+829 files in other folders)
