[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "song-analyzer"
version = "0.1.0"
description = "AI-powered song analysis for light shows"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic==2.7.4",
    "typer==0.9.0",
    "soundfile==0.12.1",
    "torch==2.1.2",
    "torchaudio==2.1.2",
    "demucs==4.0.1",
    "ffmpeg-python==0.2.0",
    "librosa==0.10.1",
    "onnxruntime==1.15.1",
    "numpy==1.26.4",
    "numba==0.59.1",
    "llvmlite==0.42.0",
    "scipy==1.11.4",
    "scikit-learn==1.3.2",
    "matplotlib==3.8.4",
    "click==8.1.7",
    "celery[redis]==5.3.6",
    "redis==5.0.1",
]

[project.scripts]
song-analyzer = "song_analyzer.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["song_analyzer*"]

[tool.setuptools.package-dir]
"" = "."